# Labs_Cpp

NewTask2/: .gitignore  CMakeLists.txt  main.cpp
NewTask2/models/: DeliveryOrganization.cpp  DeliveryOrganization.h  Order.cpp  Order.h  Product.cpp  Product.h  Shop.cpp  Shop.h  Supplier.cpp  Supplier.h  TradeOrganization.cpp  TradeOrganization.h  User.cpp  User.h  UserList.cpp  UserList.h
NewTask2/models/abstract/: Buyer.h  List.h  Seller.h  UniqueObj.h
NewTask2/models/lists/: OrderList.cpp  OrderList.h  ProductList.cpp  ProductList.h  ShopList.cpp  ShopList.h  UserList.cpp  UserList.h
NewTask2/services/: IOService.cpp  IOService.h  Utils.h
NewTask2/services/models_services/: IOShopService.cpp  IOShopService.h  IOSupplierService.cpp  IOSupplierService.h  IOUserService.cpp  IOUserService.h
Task1/: Task1.sln
Task1/Debug/: Task1.ilk
Task1/Task1/: Task1.cpp  Task1.vcxproj
Task1/Task1/Debug/: Task1.pch  vc141.idb
Task1/Task1/Debug/Task1.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Task1.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
Task2/: Task2.sln
Task2/Debug/: Task2.ilk
Task2/Task2/: Basket.cpp  Customer.cpp  Customer.h  DeliveryService.cpp  DeliveryService.h  IOService.cpp  IOService.h  ISeller.cpp  ISeller.h  IdGenerator.cpp  IdGenerator.h  Order.cpp  Order.h  Product.cpp  Product.h  ProductUnit.cpp  ProductUnit.h  Seller.cpp  Seller.h  Shop.cpp  Shop.h  Supplier.cpp  Supplier.h  Task2.cpp  Task2.vcxproj  Task2.vcxproj.filters  Test.h  TradeOrganization.cpp  TradeOrganization.h  User.cpp  User.h  Warehouse.cpp  Warehouse.h
Task2/Task2/Debug/: Task2.pch  vc141.idb
Task2/Task2/Debug/Task2.tlog/: CL.command.1.tlog  (+6 more)
Task3/: CMakeLists.txt  main.cpp
